--- a/data/read.yaml
+++ b/data/read.yaml
@@ -1,3 +1,8 @@
+- title: "Minimalism"
+  author: Joshua Fields Millburn & Ryan Nicodemus
+  date: "19.01.2023"
+  rating: ★★★★
+
 - title: "The Shallows: What the Internet Is Doing to Our Brains"
   author: Nicholas Carr
   date: "19.12.2022"
